<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:background="@color/white">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:gravity="top">
	    <TextView
	        android:id="@+id/txt_sentiment"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="@dimen/std_margin"
            android:textColor="@color/twitter"
            android:textSize="@dimen/sentiment_font"
	        android:text="@string/placeholder_sentiment"/>
	    <TextView
	        android:id="@+id/txt_tweet"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:textColor="@color/black"
	        android:textSize="@dimen/tweet_font"
	        android:gravity="center_vertical"
	        android:text="@string/placeholder_tweet"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/std_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/time_font"
            android:gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/placeholder_timestamp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="right"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/std_margin">
            <TextView
	            android:id="@+id/txt_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/black"
	            android:textSize="@dimen/name_font"
	            android:gravity="right"
	            android:text="@string/placeholder_name"/>
            <TextView
	            android:id="@+id/txt_loc"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/black"
	            android:textSize="@dimen/time_font"
	            android:gravity="right"
	            android:text="@string/placeholder_loc"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
