<?xml version="1.0" encoding="utf-8"?>
<!-- Use LinearLayout to set the arrangment -->
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@layout/body_gradient">

    <include layout="@layout/header"/>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/std_margin"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/view_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/std_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/footer_font"
            android:gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/screen_name"/>
        <EditText
	        android:id="@+id/screen_name"
	        android:width="@dimen/std_search"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical"
	        android:layout_weight="1"
	        android:inputType="text"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/std_margin"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/view_loc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/std_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/footer_font"
            android:gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/location"/>
        <EditText
            android:id="@+id/location"
            android:width="@dimen/std_search"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/std_margin"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/view_before"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/std_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/footer_font"
            android:gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/before"/>
        <EditText
            android:id="@+id/before"
            android:width="@dimen/std_search"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/std_margin"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/view_after"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/std_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/footer_font"
            android:gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/after"/>
        <EditText
            android:id="@+id/after"
            android:width="@dimen/std_search"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_advanced"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:layout_marginTop="@dimen/bottom_margin"  
        android:text="@string/search"/>
</LinearLayout>
